plugins {
    id 'java-library'
}

allprojects {
    apply plugin: "java-library"
    group 'net.orekyuu'
    archivesBaseName 'nilou'
    version '1.0-SNAPSHOT'
    sourceCompatibility = JavaVersion.VERSION_17

    repositories {
        mavenCentral()
    }

    test {
        useJUnitPlatform()
        jvmArgs = ['--add-opens', 'jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED']
    }
}